docker/k8s/01-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sop-cp-webserver
  labels:
    app: sop-cp-web
spec:
  selector:
    app: sop-cp-web
  ports:
    - port: 3000
      targetPort: 3000
